@@ -1945,9 +1945,7 @@ SEXP attribute_hidden do_subassign2_dflt(SEXP call, SEXP op, SEXP args, SEXP rho
         case 1919: /* vector     <- vector     */
         case 2020: /* expression <- expression */
 
-            if (NAMED(y))
-                y = duplicate(y);
-            SET_VECTOR_ELT(x, offset, y);
+            SET_VECTOR_ELT(x, offset, R_FixupRHS(x, y));
             break;
 
         case 2424: /* raw <- raw */
@@ -1980,8 +1978,7 @@ SEXP attribute_hidden do_subassign2_dflt(SEXP call, SEXP op, SEXP args, SEXP rho
     }
     else if (isPairList(x))
     {
-        /* if (NAMED(y)) */
-        y = duplicate(y);
+        y = R_FixupRHS(x, y);
         PROTECT(y);
         if (nsubs == 1)
         {
@@ -2108,7 +2105,7 @@ SEXP R_subassign3_dflt(SEXP call, SEXP x, SEXP nlist, SEXP val)
     if (NAMED(val) == 2)
         maybe_duplicate = TRUE;
     else if (NAMED(val) == 1)
-        REPROTECT(val = duplicate(val), pvalidx);
+        REPROTECT(val = R_FixupRHS(x, val), pvalidx);
     /* code to allow classes to extend ENVSXP */
     if (TYPEOF(x) == S4SXP)
     {
@@ -2122,7 +2119,7 @@ SEXP R_subassign3_dflt(SEXP call, SEXP x, SEXP nlist, SEXP val)
     {
         /* Here we do need to duplicate */
         if (maybe_duplicate)
-            REPROTECT(val = duplicate(val), pvalidx);
+            REPROTECT(val = R_FixupRHS(x, val), pvalidx);
         if (TAG(x) == nlist)
         {
             if (val == R_NilValue)
@@ -2242,7 +2239,7 @@ SEXP R_subassign3_dflt(SEXP call, SEXP x, SEXP nlist, SEXP val)
             {
                 /* We are just replacing an element */
                 if (maybe_duplicate)
-                    REPROTECT(val = duplicate(val), pvalidx);
+                    REPROTECT(val = R_FixupRHS(x, val), pvalidx);
                 SET_VECTOR_ELT(x, imatch, val);
             }
             else
